# ktools

./: CMakeLists.txt
mkdisk/: CMakeLists.txt
mkdisk/common/include/: mkdisk.h
mkdisk/common/src/: logger.c
mkdisk/disk/include/mkdisk/: disk.h
mkdisk/disk/src/: disk.c  diskimpl.h  io.c
mkdisk/include/: logger.h
mkdisk/test/: disktest.cpp  disktest.hpp  mkdisktest.cpp  mkdisktest.hpp
vdisk/: CMakeLists.txt
vdisk/common/include/: vdisk.h
vdisk/common/src/: guid.c  logging.c
vdisk/common/test/: VDiskCommonTest.cpp  VDiskCommonTest.hpp
vdisk/disk/include/vdisk/: disk.h
vdisk/disk/src/: disk.c  disk.h  io.c
vdisk/disk/test/: VDiskDiskTest.cpp  VDiskDiskTest.hpp
vdisk/main/src/: args.h  main.c  part.c
vdisk/part/include/vdisk/: part.h
vdisk/part/src/: part.c
vdisk/part/src/gpt/: format.c  gpt.h
vdisk/part/test/: GPTTest.cpp  GPTTest.hpp
